# studious-computing-machine

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  run.sh
PythonOOP/: README.md  item.py  items.csv  main.py  phone.py
